test/TestPhases/importchecking/invalid/whiteboximportfromlibrary.blc
import internal m "box:library/module"

@[EntryPoint]
activity Main ()
    await true
end